--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ChronoVitesse — Accueil</title><link rel="stylesheet" href="styles.css"></head>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <title>Chrono Vitesse EPS</title>
+  <link rel="stylesheet" href="assets/styles.css">
+</head>
 <body>
-<div class="container" style="min-height:calc(100vh - 60px)">
-  <div class="center" style="height:65vh; flex-direction:column; gap:22px">
-    <h1 style="font-size:64px">ChronoVitesse</h1>
-    <div class="actions">
-      <a class="btn big primary" href="eleve.html">🎓 Espace Élève</a>
-      <a class="btn big" href="prof.html">🧑‍🏫 Espace Prof</a>
-      <a class="btn big" href="aide.html">❓ Comprendre les tests</a>
+  <div class="container">
+    <div class="header">
+      <div class="brand">Chrono Vitesse • EPS</div>
+      <div class="nav"><a href="https://eps-barletta.github.io/ScanProf/" target="_blank" rel="noopener">ScanProf</a></div>
     </div>
+
+    <div class="card">
+      <p>Choisis un espace :</p>
+      <div class="grid-buttons">
+        <a href="eleve.html">Espace élève</a>
+        <a href="prof.html">Espace prof</a>
+      </div>
+    </div>
+
+    <div class="footer">© Équipe EPS • Vauban — LUXEMBOURG — JB</div>
   </div>
-</div>
-<div class="footer">ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
-</body></html>
+</body>
+</html>
