--- a/prof.html
+++ b/prof.html
@@ -1,64 +1,171 @@
-<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Espace Prof — ChronoVitesse</title><link rel="stylesheet" href="styles.css"></head>
-<body><div class="container">
-<header><h1>🧑‍🏫 Espace Prof</h1><div class="actions"><a class="btn" href="index.html">🏠 Accueil</a></div></header>
-<div class="grid">
-  <section class="card"><div class="content">
-    <h2>Classe</h2>
-    <p class="help">Ajoutez vos élèves (ou import CSV), puis lancez un test. Pendant le test, cliquez un nom pour fixer sa VMA.</p>
-    <div class="grid-3">
-      <div><label>Nom</label><input id="nom" class="input"></div>
-      <div><label>Prénom</label><input id="prenom" class="input"></div>
-      <div><label>Classe</label><input id="classeIn" class="input" value="4C"></div>
-      <div><label>Sexe</label><select id="sexe" class="input"><option>M</option><option>F</option></select></div>
-      <div><label>Observateur ?</label><select id="obs" class="input"><option value="non">non</option><option value="oui">oui</option></select></div>
-      <div class="actions"><button class="btn ok" id="add">➕ Ajouter</button></div>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Prof • Chrono Vitesse EPS</title>
+  <link rel="stylesheet" href="assets/styles.css">
+  <script defer src="assets/app.js"></script>
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <div class="brand">Espace prof</div>
+      <div class="nav"><a href="index.html">Accueil</a></div>
     </div>
-    <div class="toolbar" style="margin-top:10px">
-      <label class="btn">📥 Import CSV<input type="file" id="csv" accept=".csv" style="display:none"></label>
-      <button class="btn" id="save">💾 Sauvegarder</button>
-      <button class="btn danger" id="clear">🗑️ Vider</button>
+
+    <div class="card">
+      <div class="form-row">
+        <div>
+          <label>Importer la liste (CSV : nom,prenom,classe,sexe)</label>
+          <input type="file" id="csvIn" accept=".csv">
+        </div>
+        <div>
+          <label>Actions</label>
+          <div class="timer-actions" style="justify-content:flex-start">
+            <button class="btn-ghost" id="saveList">Sauver</button>
+            <button class="btn-ghost" id="loadList">Charger</button>
+            <button class="btn-ghost" id="clearList">Vider</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="sep"></div>
-    <div id="list"></div>
-  </div></section>
-  <section class="card"><div class="content">
-    <h2>Lancer un test</h2>
-    <div class="actions">
-      <a class="btn primary big" href="prof-navette-20m.html">🎵 Navette 20 m</a>
-      <a class="btn primary big" href="prof-45-15.html">⏱️ 45/15</a>
-      <a class="btn big" href="prof-minuteur.html">🕒 Cooper/Demi</a>
+
+    <div class="card">
+      <div class="timer">
+        <div class="timer-screen" id="screen">00:00</div>
+        <div class="timer-sub" id="screenSub">millisecondes masquées</div>
+        <div class="timer-bar"><div id="barFill"></div></div>
+        <div class="timer-actions">
+          <button class="btn-start" id="btnStart">Démarrer</button>
+          <button class="btn-lap" id="btnLap" disabled>Intermédiaire</button>
+          <button class="btn-stop" id="btnStop" disabled>Stop</button>
+          <button class="btn-reset" id="btnReset" disabled>Réinitialiser</button>
+          <button class="btn-ghost" id="btnShowMs">Voir ms (fin)</button>
+          <button class="btn-ghost" id="btnTest6">Test VMA 6'</button>
+          <button class="btn-ghost" id="btnTest12">Test VMA 12'</button>
+          <button class="btn-ghost" id="btnTour200">Tour = 200 m</button>
+        </div>
+        <div class="timer-sub" id="liveVMA">Vitesse: — km/h • VMA estimée: — km/h • Distance: 0 m</div>
+        <table class="table" id="splitTable">
+          <thead><tr><th>#</th><th>Passage</th><th>Temps au passage</th><th>Temps cumulé</th><th>Total</th></tr></thead>
+          <tbody></tbody>
+        </table>
+      </div>
     </div>
-    <p class="help">Conseil : chargez la classe puis ouvrez le test en plein écran.</p>
-  </div></section>
-</div>
-</div><div class="footer">ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
+
+    <div class="card">
+      <div class="timer-sub">Clique un élève pendant/à la fin du test pour lui affecter la VMA mesurée.</div>
+      <div class="timer-actions no-print" style="justify-content:flex-start">
+        <button class="btn-ghost" id="sortAlpha">Trier A→Z</button>
+        <button class="btn-ghost" id="sortVMAUp">VMA ↑</button>
+        <button class="btn-ghost" id="sortVMADown">VMA ↓</button>
+        <button class="btn-ghost" id="btnCSV">Exporter CSV</button>
+        <button class="btn-ghost" id="btnPDF">PDF / Imprimer</button>
+      </div>
+      <table class="table" id="tblEleves">
+        <thead><tr><th>Nom</th><th>Prénom</th><th>Classe</th><th>Sexe</th><th>VMA (km/h)</th></tr></thead>
+        <tbody></tbody>
+      </table>
+    </div>
+
+    <div class="footer">© Équipe EPS • Vauban — LUXEMBOURG — JB</div>
+  </div>
+
 <script>
-let roster = JSON.parse(localStorage.getItem('cv_roster')||'[]');
-function render(){
-  const box=document.getElementById('list'); box.innerHTML='';
-  if(roster.length===0){ box.innerHTML='<p class="help">Aucun élève.</p>'; return; }
-  roster.forEach((s,i)=>{
-    const row=document.createElement('div'); row.className='row';
-    row.innerHTML=`<div class="name">${s.nom} ${s.prenom}</div><div class="pill">${s.classe}</div><div class="tag">${s.sexe}</div><div class="tag">${s.obs?'observateur':'coureur'}</div><div><button class="btn danger" data-del="${i}">Supprimer</button></div>`;
-    box.appendChild(row);
-  });
-  box.querySelectorAll('[data-del]').forEach(b=>b.onclick=()=>{ roster.splice(Number(b.dataset.del),1); render(); });
-}
-document.getElementById('add').onclick=()=>{
-  const s={nom:document.getElementById('nom').value.trim(), prenom:document.getElementById('prenom').value.trim(), classe:document.getElementById('classeIn').value.trim(), sexe:document.getElementById('sexe').value, obs:document.getElementById('obs').value==='oui'};
-  if(!s.nom||!s.prenom||!s.classe) return alert('Nom, Prénom, Classe requis');
-  roster.push(s); render();
-};
-document.getElementById('save').onclick=()=>{ localStorage.setItem('cv_roster', JSON.stringify(roster)); alert('Liste sauvegardée'); };
-document.getElementById('clear').onclick=()=>{ if(confirm('Vider la liste ?')){ roster=[]; render(); localStorage.removeItem('cv_roster'); } };
-document.getElementById('csv').addEventListener('change',(e)=>{
-  const f=e.target.files[0]; if(!f) return; const reader=new FileReader(); reader.onload=()=>{
-    const lines=reader.result.split(/\r?\n/).filter(x=>x.trim()); const out=[];
-    for(const line of lines.slice(1)){ const [nom,prenom,classe,sexe,observateur]=line.split(',').map(x=>x?x.trim():'');
-      if(nom&&prenom&&classe) out.push({nom,prenom,classe,sexe:sexe||'M',obs:(observateur||'non').toLowerCase().startsWith('o')});
-    } roster=out; render();
-  }; reader.readAsText(f);
+// Timer instance
+const timer = new DigitalTimer({
+  screen: document.getElementById('screen'),
+  sub: document.getElementById('screenSub'),
+  bar: document.getElementById('barFill')
 });
+const btnStart = document.getElementById('btnStart');
+const btnLap = document.getElementById('btnLap');
+const btnStop = document.getElementById('btnStop');
+const btnReset = document.getElementById('btnReset');
+const btnShowMs = document.getElementById('btnShowMs');
+btnStart.onclick = ()=>{ timer.start(); btnLap.disabled=false; btnStop.disabled=false; btnReset.disabled=false; };
+btnLap.onclick = ()=> timer.lap();
+btnStop.onclick = ()=> timer.stop();
+btnReset.onclick = ()=>{ timer.reset(); document.querySelector('#splitTable tbody').innerHTML=''; document.getElementById('liveVMA').textContent='Vitesse: — km/h • VMA estimée: — km/h • Distance: 0 m'; };
+btnShowMs.onclick = ()=>{ document.getElementById('screenSub').textContent = 'Total (centièmes) : ' + timer.fmt(timer.getTotal(), true); };
+document.getElementById('btnTest6').onclick = ()=> timer.setTargetMinutes(6);
+document.getElementById('btnTest12').onclick = ()=> timer.setTargetMinutes(12);
+
+let tourMeters = 200, nextLabelMeters = 200;
+document.getElementById('btnTour200').onclick = ()=>{ tourMeters=200; nextLabelMeters=200; };
+
+// Splits table
+const tbodySplits = document.querySelector('#splitTable tbody');
+function addRow(row){
+  const tr = document.createElement('tr');
+  const label = `${nextLabelMeters} m`; nextLabelMeters += tourMeters;
+  tr.innerHTML = `<td>${row.idx}</td><td>${label}</td><td>${timer.fmt(row.lapMs,false)}</td><td>${timer.fmt(row.cumMs,false)}</td><td class="total-cell">—</td>`;
+  tbodySplits.appendChild(tr);
+}
+Bus.on('timer:lap', (row)=>{ addRow(row); updateLive(); });
+Bus.on('timer:stop', (info)=>{
+  [...tbodySplits.querySelectorAll('.total-cell')].forEach(td => td.textContent = timer.fmt(info.totalMs,false));
+  updateLive(true);
+});
+function updateLive(final=false){
+  const splits = timer.getSplits();
+  const dist = splits.length * tourMeters;
+  const sec = timer.getTotal()/1000;
+  const vInst = splits.length ? (tourMeters / (splits[splits.length-1].lapMs/1000))*3.6 : 0;
+  const vma = sec>0 ? (dist/sec)*3.6 : 0;
+  document.getElementById('liveVMA').textContent = `Vitesse: ${vInst.toFixed(2)} km/h • VMA estimée: ${vma.toFixed(2)} km/h • Distance: ${dist} m` + (final? ` • Total VMA: ${vma.toFixed(2)} km/h` : '');
+}
+
+// Élèves
+let eleves = load('eleves', []); // [{nom,prenom,classe,sexe,vma?}]
+const tbody = document.querySelector('#tblEleves tbody');
+function render(){
+  tbody.innerHTML='';
+  eleves.forEach((e,idx)=>{
+    const tr = document.createElement('tr');
+    tr.innerHTML = `<td>${e.nom||''}</td><td>${e.prenom||''}</td><td>${e.classe||''}</td><td>${e.sexe||''}</td><td>${e.vma?.toFixed?e.vma.toFixed(2):(e.vma||'')}</td>`;
+    tr.addEventListener('click', ()=>{
+      const dist = timer.getSplits().length * tourMeters;
+      const vma = timer.getTotal()>0 ? (dist/(timer.getTotal()/1000))*3.6 : 0;
+      e.vma = vma;
+      store('eleves', eleves);
+      render();
+    });
+    tbody.appendChild(tr);
+  });
+}
 render();
-</script></body></html>
+
+// Import CSV
+document.getElementById('csvIn').addEventListener('change', (ev)=>{
+  const file = ev.target.files[0]; if(!file) return;
+  const reader = new FileReader();
+  reader.onload = e => {
+    const {headers, rows} = CSV.parse(e.target.result);
+    eleves = rows.map(r=>({nom:r.nom||r.Nom||'', prenom:r.prenom||r["Prénom"]||'', classe:r.classe||r.Classe||'', sexe:r.sexe||r.Sexe||'', vma: r.vma? +r.vma : (r.VMA? +r.VMA : '')}));
+    store('eleves', eleves); render();
+  };
+  reader.readAsText(file,'utf-8');
+});
+
+// Save/Load/Clear
+document.getElementById('saveList').onclick = ()=> store('eleves', eleves);
+document.getElementById('loadList').onclick = ()=>{ eleves = load('eleves', []); render(); };
+document.getElementById('clearList').onclick = ()=>{ eleves = []; store('eleves', eleves); render(); };
+
+// Sort
+document.getElementById('sortAlpha').onclick = ()=>{ eleves.sort((a,b)=> (a.nom||'').localeCompare(b.nom||'') || (a.prenom||'').localeCompare(b.prenom||'')); render(); };
+document.getElementById('sortVMAUp').onclick = ()=>{ eleves.sort((a,b)=> (a.vma??-1)-(b.vma??-1)); render(); };
+document.getElementById('sortVMADown').onclick = ()=>{ eleves.sort((a,b)=> (b.vma??-1)-(a.vma??-1)); render(); };
+
+// Export CSV & PDF
+document.getElementById('btnCSV').onclick = ()=>{
+  const headers = ['nom','prenom','classe','sexe','vma'];
+  const csv = CSV.to(eleves.map(e=>({nom:e.nom||'', prenom:e.prenom||'', classe:e.classe||'', sexe:e.sexe||'', vma: (e.vma?.toFixed?e.vma.toFixed(2):(e.vma||''))})), headers);
+  download('vma-classe.csv', csv, 'text/csv;charset=utf-8');
+};
+document.getElementById('btnPDF').onclick = ()=> window.print();
+</script>
+</body>
+</html>
