--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
-<!doctype html><html lang="fr"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<link rel="manifest" href="assets/manifest.webmanifest"><link rel="stylesheet" href="assets/styles.css"><title>Chrono Vitesse EPS</title></head>
-<body onload="baseInit()"><div class="container">
-<div class="header"><div class="brand">Chrono Vitesse • EPS</div><div class="nav"><button onclick="toggleDark()">Mode sombre</button><button onclick="toggleXL()">Taille XL</button></div></div>
-<div class="card"><p>Choisis :</p><div class="controls"><a class="primary" href="eleve.html">Espace élève</a><a class="btn" href="projection.html">Projection (prof)</a></div></div>
-<div class="footer">© EPS</div></div><script src="assets/app.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="fr"><head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+<link rel="stylesheet" href="assets/styles.css?v=7">
+<title>Chrono Vitesse EPS</title>
+</head>
+<body onload="baseInit()">
+<div class="container">
+  <div class="header">
+    <div class="brand"><img src="assets/icons/logo.svg" alt="logo">Chrono Vitesse • EPS</div>
+    <div class="nav">
+      <button onclick="toggleXL()">Taille XL</button>
+      <button onclick="toggleDark()">Mode sombre</button>
+    </div>
+  </div>
+
+  <div class="card">
+    <h2>Démarrer</h2>
+    <div class="controls">
+      <a class="primary" href="eleve.html">Espace élève</a>
+      <a class="ghost" href="projection.html">Projection (prof)</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <h2>Conseil d'usage</h2>
+    <p>Sur iPad / projecteur : active <b>Taille XL</b>, puis utilise <b>Plein écran</b> et <b>Anti‑veille</b> depuis la page.</p>
+  </div>
+
+  <div class="footer">© EPS • Design PRO v7</div>
+</div>
+<script src="assets/app.js?v=7"></script>
+</body></html>
