--- a/projection.html
+++ b/projection.html
@@ -1,39 +1,97 @@
-<!doctype html><html lang="fr"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<link rel="manifest" href="assets/manifest.webmanifest"><link rel="stylesheet" href="assets/styles.css"><title>Projection • Chrono EPS</title></head>
-<body onload="baseInit()"><div class="container">
-<div class="header"><div class="brand">Projection (tests)</div><div class="nav"><button onclick="toggleDark()">Mode sombre</button><button onclick="toggleXL()">Taille XL</button></div></div>
-<div class="card"><div class="controls">
-<label>Type de test</label><select id="testType"><option value="libre">Libre</option><option value="cooper12">Cooper 12'</option><option value="demi6">Demi-Cooper 6'</option></select>
-<label>Tour (m)</label><input id="tourMeters" type="number" min="10" step="1" value="200">
-<button data-preset="100">100</button><button data-preset="200">200</button><button data-preset="250">250</button><button data-preset="400">400</button>
-<label style="margin-left:12px">Cible VMA (km/h)</label><input id="targetVMA" type="number" min="1" step="0.1">
-<label style="margin-left:12px">Seuils (%, vert/orange)</label><input id="thr2" type="number" min="0.5" step="0.5" value="2"><input id="thr5" type="number" min="1" step="0.5" value="5">
-</div></div>
-<div class="card"><div class="controls"><button id="toggleBeep">Bip</button><button id="toggleVib">Vibration</button><button id="toggleFS">Plein écran</button><button id="toggleWake">Anti-veille</button><button class="primary" id="btnCountdown">Compte à rebours 10s</button></div>
-<div class="timer zone" id="timerZone">
-<div class="timer-screen" id="screen">00:00</div><div class="timer-sub" id="live">Prêt</div>
-<div class="timer-bar"><div id="barFill"></div></div>
-<div class="timer-actions"><button class="btn-start" id="btnStart">Démarrer</button><button class="btn-lap" id="btnLap" disabled>Intermédiaire</button><button class="btn-stop" id="btnStop" disabled>Stop</button><button class="btn-reset" id="btnReset" disabled>Réinitialiser</button></div>
-<table class="table"><thead><tr><th>#</th><th>Passage</th><th>Temps</th><th>Cumulé</th></tr></thead><tbody id="tbody"></tbody></table>
-</div></div>
-<div class="footer">Interface XXL claire et lisible.</div></div>
-<script src="assets/app.js"></script>
+<!DOCTYPE html>
+<html lang="fr"><head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+<link rel="stylesheet" href="assets/styles.css?v=7">
+<title>Projection • Chrono Vitesse EPS</title>
+</head>
+<body onload="baseInit()">
+<div class="container">
+  <div class="header">
+    <div class="brand"><img src="assets/icons/logo.svg" alt="logo">Projection (tests)</div>
+    <div class="nav">
+      <button onclick="toggleXL()">Taille XL</button>
+      <button onclick="toggleDark()">Mode sombre</button>
+    </div>
+  </div>
+
+  <div class="card">
+    <h2>Réglages</h2>
+    <div class="controls" role="group" aria-label="Préréglages de test">
+      <label for="testType">Type de test</label>
+      <select id="testType">
+        <option value="libre">Libre</option>
+        <option value="cooper12">Cooper 12'</option>
+        <option value="demi6">Demi-Cooper 6'</option>
+      </select>
+      <label for="tourMeters">Longueur du tour (m)</label>
+      <input id="tourMeters" type="number" min="10" step="1" value="200" inputmode="numeric">
+      <button class="ghost" data-preset="100">100</button>
+      <button class="ghost" data-preset="200">200</button>
+      <button class="ghost" data-preset="250">250</button>
+      <button class="ghost" data-preset="400">400</button>
+      <label style="margin-left:12px" for="targetVMA">Cible VMA (km/h)</label>
+      <input id="targetVMA" type="number" min="1" step="0.1" inputmode="decimal">
+      <label style="margin-left:12px" for="thr2">Seuils (%, vert/orange)</label>
+      <input id="thr2" type="number" min="0.5" step="0.5" value="2">
+      <input id="thr5" type="number" min="1" step="0.5" value="5">
+    </div>
+  </div>
+
+  <div class="card">
+    <h2>Test</h2>
+    <div class="controls" role="group" aria-label="Options">
+      <button class="ghost" id="toggleBeep" aria-pressed="false">Bip</button>
+      <button class="ghost" id="toggleVib" aria-pressed="false">Vibration</button>
+      <button class="ghost" id="toggleFS">Plein écran</button>
+      <button class="ghost" id="toggleWake">Anti-veille</button>
+      <button class="primary" id="btnCountdown">Compte à rebours 10s</button>
+    </div>
+    <div class="timer zone" id="timerZone">
+      <div class="timer-screen" id="screen" aria-live="polite">00:00</div>
+      <div class="timer-sub" id="live" aria-live="polite">Prêt</div>
+      <div class="timer-bar" aria-hidden="true"><div id="barFill"></div></div>
+      <div class="timer-actions">
+        <button class="btn-start" id="btnStart">Démarrer</button>
+        <button class="btn-lap" id="btnLap" disabled>Intermédiaire</button>
+        <button class="btn-stop" id="btnStop" disabled>Stop</button>
+        <button class="btn-reset" id="btnReset" disabled>Réinitialiser</button>
+      </div>
+      <table class="table"><thead><tr><th>#</th><th>Passage</th><th>Temps</th><th>Cumulé</th></tr></thead><tbody id="tbody"></tbody></table>
+    </div>
+  </div>
+
+  <div class="footer">Interface XXL lisible en gymnase • PRO v7</div>
+</div>
+
+<script src="assets/app.js?v=7"></script>
 <script>
-(function(){['testType','tourMeters','targetVMA','thr2','thr5'].forEach(id=>{const el=document.getElementById(id);const v=localStorage.getItem('proj_'+id);if(v!==null)el.value=v;el.addEventListener('input',()=>localStorage.setItem('proj_'+id,el.value));});})();
-let wl=null;toggleBeep.onclick=()=>useBeep=!useBeep;toggleVib.onclick=()=>useVib=!useVib;
-toggleFS.onclick=()=>{if(!document.fullscreenElement){document.documentElement.requestFullscreen?.()}else{document.exitFullscreen?.()}};
-toggleWake.onclick=async()=>{try{wl=wl||(navigator.wakeLock&&await navigator.wakeLock.request('screen'))}catch(e){alert('Anti-veille non supporté')}};
-const timer=new DigitalTimer({screen:screen,sub:null,bar:barFill});const tbody=document.getElementById('tbody');let nextLabelMeters=0;
-function getTour(){return Math.max(10,parseInt(tourMeters.value||'200',10))}
-function getTargetVMA(){const t=parseFloat(targetVMA.value||'0');return t>0?t:null}
-function getThr(){const t2=parseFloat(thr2.value||'2'),t5=parseFloat(thr5.value||'5');return {t2:Math.max(.5,t2)/100,t5:Math.max(1,t5)/100}}
-function setZone(c){timerZone.classList.remove('green','orange','red');if(c)timerZone.classList.add(c)}
-document.querySelectorAll('[data-preset]').forEach(b=>b.onclick=()=>{tourMeters.value=b.getAttribute('data-preset');nextLabelMeters=getTour()});
-function applyTestPreset(){const t=testType.value;if(t==='cooper12'){timer.setTargetMinutes(12);live.textContent='Test Cooper 12 minutes'}else if(t==='demi6'){timer.setTargetMinutes(6);live.textContent='Demi-Cooper 6 minutes'}else{timer.setTargetMinutes(null);live.textContent='Mode Libre'}};applyTestPreset();testType.onchange=applyTestPreset;
-btnStart.onclick=()=>{timer.start();btnLap.disabled=false;btnStop.disabled=false;btnReset.disabled=false};btnLap.onclick=()=>{timer.lap();vibrate(60);beep()};btnStop.onclick=()=>timer.stop();btnReset.onclick=()=>{timer.reset();tbody.innerHTML='';live.textContent='Prêt';nextLabelMeters=getTour();setZone(null)};
-Bus.on('timer:lap',({idx,lapMs,cumMs})=>{const tr=document.createElement('tr');if(nextLabelMeters===0)nextLabelMeters=getTour();const label=`${nextLabelMeters} m`;nextLabelMeters+=getTour();tr.innerHTML=`<td>${idx}</td><td>${label}</td><td>${fmt(lapMs)}</td><td>${fmt(cumMs)}</td>`;tbody.appendChild(tr)});
-function fmt(ms){const m=Math.floor(ms/60000),s=Math.floor((ms%60000)/1000);return `${String(m).padStart(2,'0')}:${String(s).padStart(2,'0')}`}
-function updateLive(){const s=timer.getSplits();const dist=s.length*getTour();const sec=timer.getTotal()/1000;const vInst=s.length?(getTour()/(s[s.length-1].lapMs/1000))*3.6:0;const vma=sec>0?(dist/sec)*3.6:0;const tgt=getTargetVMA();live.textContent=`Dist ${dist} m • Vitesse ${vInst.toFixed(2)} km/h • VMA ${vma.toFixed(2)} km/h`+(tgt?` • Cible ${tgt} km/h`:``);if(tgt){const {t2,t5}=getThr();const dev=Math.abs(vInst-tgt)/tgt;setZone(dev<=t2?'green':(dev<=t5?'orange':'red'))}requestAnimationFrame(updateLive)};updateLive();
-btnCountdown.onclick=async()=>{if(document.fullscreenEnabled&&!document.fullscreenElement){await document.documentElement.requestFullscreen().catch(()=>{})}let count=10;live.textContent='Départ dans 10';const id=setInterval(()=>{count--;live.textContent=count>0?`Départ dans ${count}`:'GO !';if(count<=0){clearInterval(id);beep();vibrate(120);timer.start();btnLap.disabled=false;btnStop.disabled=false;btnReset.disabled=false}},1000)};
-</script></body></html>
+// Persist selection
+(function(){ ['testType','tourMeters','targetVMA','thr2','thr5'].forEach(id=>{ const el=document.getElementById(id); const val=localStorage.getItem('proj_'+id); if(val!==null) el.value=val; el.addEventListener('input',()=>localStorage.setItem('proj_'+id, el.value)); }); })();
+// Toggles
+let wl=null;toggleBeep.onclick=()=>{useBeep=!useBeep;toggleBeep.setAttribute('aria-pressed',useBeep)};
+toggleVib.onclick=()=>{useVib=!useVib;toggleVib.setAttribute('aria-pressed',useVib)};
+toggleFS.onclick=()=>{ if(!document.fullscreenElement){ document.documentElement.requestFullscreen?.(); } else { document.exitFullscreen?.(); } };
+toggleWake.onclick=async()=>{ try{ wl = wl || (navigator.wakeLock && await navigator.wakeLock.request('screen')); }catch(e){ alert("Anti-veille non supporté"); } };
+// Timer
+const timer=new DigitalTimer({screen:screen, sub:null, bar:barFill});
+const tbody=document.getElementById('tbody'); let nextLabelMeters=0;
+function getTour(){ return Math.max(10, parseInt(tourMeters.value||'200',10)); }
+function getTargetVMA(){ const t=parseFloat(targetVMA.value||'0'); return t>0? t: null; }
+function getThr(){ const t2=parseFloat(thr2.value||'2'), t5=parseFloat(thr5.value||'5'); return {t2:Math.max(0.5,t2)/100, t5:Math.max(1,t5)/100}; }
+function setZone(color){ timerZone.classList.remove('green','orange','red'); if(color) timerZone.classList.add(color); }
+document.querySelectorAll('[data-preset]').forEach(b=> b.onclick=()=>{ tourMeters.value=b.getAttribute('data-preset'); nextLabelMeters=getTour(); });
+function applyTestPreset(){ const t=testType.value; if(t==='cooper12'){ timer.setTargetMinutes(12); live.textContent="Test Cooper 12 minutes"; } else if(t==='demi6'){ timer.setTargetMinutes(6); live.textContent="Demi-Cooper 6 minutes"; } else { timer.setTargetMinutes(null); live.textContent="Mode Libre"; } }
+applyTestPreset(); testType.onchange=applyTestPreset;
+btnStart.onclick=()=>{ timer.start(); btnLap.disabled=false; btnStop.disabled=false; btnReset.disabled=false; };
+btnLap.onclick=()=>{ timer.lap(); vibrate(60); beep(); };
+btnStop.onclick=()=>timer.stop();
+btnReset.onclick=()=>{ timer.reset(); tbody.innerHTML=''; live.textContent='Prêt'; nextLabelMeters=getTour(); setZone(null); };
+Bus.on('timer:lap', ({idx,lapMs,cumMs})=>{ const tr=document.createElement('tr'); if(nextLabelMeters===0) nextLabelMeters=getTour(); const label=`${nextLabelMeters} m`; nextLabelMeters+=getTour(); tr.innerHTML=`<td>${idx}</td><td>${label}</td><td>${fmt(lapMs)}</td><td>${fmt(cumMs)}</td>`; tbody.appendChild(tr); });
+function fmt(ms){ const m=Math.floor(ms/60000), s=Math.floor((ms%60000)/1000); return `${String(m).padStart(2,'0')}:${String(s).padStart(2,'0')}`; }
+function updateLive(){ const splits=timer.getSplits(); const dist=splits.length*getTour(); const sec=timer.getTotal()/1000; const vInst=splits.length?(getTour()/(splits[splits.length-1].lapMs/1000))*3.6:0; const vma=sec>0?(dist/sec)*3.6:0; const tgt=getTargetVMA(); live.textContent = `Dist ${dist} m • Vitesse ${vInst.toFixed(2)} km/h • VMA ${vma.toFixed(2)} km/h` + (tgt?` • Cible ${tgt} km/h`:'');
+  if(tgt){ const {t2,t5}=getThr(); const dev=Math.abs(vInst-tgt)/tgt; setZone(dev<=t2 ? 'green' : (dev<=t5 ? 'orange' : 'red')); } requestAnimationFrame(updateLive); }
+updateLive();
+btnCountdown.onclick=async()=>{ if(document.fullscreenEnabled && !document.fullscreenElement){ await document.documentElement.requestFullscreen().catch(()=>{}); } let count=10; live.textContent="Départ dans 10"; const id=setInterval(()=>{ count--; live.textContent = count>0? `Départ dans ${count}` : "GO !"; if(count<=0){ clearInterval(id); beep(880,160); vibrate(120); timer.start(); btnLap.disabled=false; btnStop.disabled=false; btnReset.disabled=false; } },1000); };
+</script>
+</body></html>
