--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="page-home">
   <main class="centered">
     <h1 class="app-title">ChronoVitesse</h1>
-    <a class="btn btn-primary btn-xl" href="chrono.html">Démarrer</a>
+    <a class="btn btn-primary btn-xl" href="options.html">Démarrer</a>
   </main>
   <footer class="footer">
     ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
