--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ChronoVitesse</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="page-home">
   <main class="centered">
-    <h1 class="app-title">ChronoVitesse</h1>
-    <a class="btn btn-primary btn-xl" href="options.html">Démarrer</a>
+    <h1 class="app-title gradient">ChronoVitesse</h1>
+    <div class="home-actions">
+      <a class="btn btn-primary btn-xl" href="options.html">Démarrer</a>
+      <a class="btn btn-outline btn-xl" href="aide.html">Aide</a>
+    </div>
   </main>
   <footer class="footer">
     ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
