--- a/mode.html
+++ b/mode.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ChronoVitesse • Mode</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js" defer></script>
   <script src="modes.js" defer></script>
@@ -14,7 +17,10 @@
   </header>
 
   <main class="container">
-    <a href="options.html" class="btn btn-outline">&larr; Retour</a>
+    <div class="nav-row">
+      <a href="options.html" class="btn btn-outline">&larr; Retour</a>
+      <a href="aide.html" class="btn btn-outline">Aide</a>
+    </div>
 
     <section class="card">
       <h2 id="mode-name">Mode</h2>
