--- a/options.html
+++ b/options.html
@@ -80,7 +80,7 @@
     <section class="card">
       <h2>Tests d'endurance (optionnel)</h2>
       <div class="mode-buttons">
-        <button class="btn btn-pink"   onclick="go('demiCooper')">Demi‑Cooper (6′)</button>
+        <button class="btn btn-pink"   onclick="go('demiCooper')">Demi-Cooper (6′)</button>
         <button class="btn btn-pink"   onclick="go('cooper')">Cooper (12′)</button>
       </div>
     </section>
