--- a/aide.html
+++ b/aide.html
@@ -15,32 +15,41 @@
   </header>
 
   <main class="container">
-    <a href="index.html" class="btn btn-outline">&larr; Accueil</a>
+    <div class="nav-row">
+      <a href="index.html" class="btn btn-outline">&larr; Accueil</a>
+      <a href="options.html" class="btn btn-outline">Démarrer</a>
+    </div>
 
-    <section class="card prose">
-      <h2>Guide rapide</h2>
-      <p><strong>ChronoVitesse</strong> est conçu pour l&rsquo;EPS : gros boutons, affichage lisible, exports rapides.</p>
+    <section class="cards-grid">
+      <article class="help-card hc-blue">
+        <h3>Temps intermédiaire</h3>
+        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, exporte au choix les <em>temps cumulés</em> (t200, t400…) ou les <em>temps par intervalle</em> (i1, i2…).</p>
+      </article>
 
-      <h3>Modes principaux</h3>
-      <ul>
-        <li><strong>Temps intermédiaire</strong> — Tu indiques une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Tu appuies sur <em>Tour</em> à chaque passage. À la fin, choisis d&rsquo;exporter les <em>temps cumulés</em> (t200, t400…) ou les <em>temps à chaque intervalle</em> (i1, i2…). CSV dispo.</li>
-        <li><strong>Chrono</strong> — Chronométrage simple : <em>Démarrer</em>, <em>Stop</em>, <em>Reset</em>. Aucun tour. Pas de QR (juste le temps affiché et export CSV si besoin).</li>
-        <li><strong>Minuteur</strong> — Compte à rebours (ex. 5:00) avec grand cercle visuel. <em>Démarrer</em>, <em>Stop</em>, <em>Reset</em>.</li>
-        <li><strong>Chrono avec calcul de vitesse</strong> — Tu renseignes la distance (ex. 100 m). <em>Stop</em> à l’arrivée → calcul automatique du temps et de la vitesse moyenne, QR minimal.</li>
-        <li><strong>Minuteur avec distance</strong> — Tu règles la durée et la distance par tour (ex. piste 100 m). À chaque <em>Tour</em>, on additionne la distance et calcule la vitesse au tour. QR = distance totale & vitesse moyenne.</li>
-      </ul>
+      <article class="help-card hc-green">
+        <h3>Chrono</h3>
+        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, pas de QR.</p>
+      </article>
 
-      <h3>Exports</h3>
-      <ul>
-        <li><strong>CSV</strong> : une ligne par passage + une ligne TOTAL.</li>
-        <li><strong>QR code</strong> : format JSON minimal adapté au mode, pour intégration dans ton application de classement.</li>
-      </ul>
+      <article class="help-card hc-emerald">
+        <h3>Minuteur</h3>
+        <p>Compte à rebours visuel avec anneau et affichage central. Parfait pour gérer des ateliers en temps limité.</p>
+      </article>
 
-      <h3>Conseils d&rsquo;usage</h3>
-      <ul>
-        <li>Sur tablette/smartphone, active le <em>plein écran</em> du navigateur pour éviter les faux appuis.</li>
-        <li>Teste les QR avec ton lecteur avant la séance pour valider le format.</li>
-      </ul>
+      <article class="help-card hc-purple">
+        <h3>Chrono avec calcul de vitesse</h3>
+        <p>Indique une distance (ex. 100 m), lance le chrono et <strong>Stop</strong> à l’arrivée : la vitesse moyenne est calculée. Récapitulatif + QR minimal.</p>
+      </article>
+
+      <article class="help-card hc-amber">
+        <h3>Minuteur avec distance</h3>
+        <p>Définit une durée et une distance par tour (ex. 100 m). Chaque <strong>Tour</strong> additionne la distance et calcule la vitesse au tour. En fin de test, ajoute éventuellement une fraction de tour (¼, ½, ¾) au total.</p>
+      </article>
+
+      <article class="help-card hc-pink">
+        <h3>Tests d’endurance</h3>
+        <p><strong>Demi‑Cooper (6′)</strong> et <strong>Cooper (12′)</strong>. Indique la distance par tour. À la fin, tu peux ajouter ¼, ½ ou ¾ de tour pour affiner la distance. VMA = vitesse moyenne.</p>
+      </article>
     </section>
   </main>
 
