--- a/aide.html
+++ b/aide.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aide • ChronoVitesse</title>
+  <title>Aide • RunMeasure</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="topbar colorful">
-    <h1>ChronoVitesse</h1>
+    <h1>RunMeasure</h1>
   </header>
 
   <main class="container">
@@ -28,7 +28,7 @@
 
       <article class="help-card hc-green">
         <h3>Chrono</h3>
-        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, pas de QR.</p>
+        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, pas de QR.</p>
       </article>
 
       <article class="help-card hc-emerald">
@@ -38,23 +38,23 @@
 
       <article class="help-card hc-purple">
         <h3>Chrono avec calcul de vitesse</h3>
-        <p>Indique une distance (ex. 100 m), lance le chrono et <strong>Stop</strong> à l’arrivée : la vitesse moyenne est calculée. Récapitulatif + QR minimal.</p>
+        <p>Indique une distance (ex. 100 m), lance le chrono et <strong>Stop</strong> à l’arrivée : la vitesse moyenne est calculée. Récapitulatif + QR minimal.</p>
       </article>
 
       <article class="help-card hc-amber">
         <h3>Minuteur avec distance</h3>
-        <p>Définit une durée et une distance par tour (ex. 100 m). Chaque <strong>Tour</strong> additionne la distance et calcule la vitesse au tour. En fin de test, ajoute éventuellement une fraction de tour (¼, ½, ¾) au total.</p>
+        <p>Définit une durée et une distance par tour (ex. 100 m). Chaque <strong>Tour</strong> additionne la distance et calcule la vitesse du tour. Fin de test : ajoute ¼, ½ ou ¾ de tour si besoin.</p>
       </article>
 
       <article class="help-card hc-pink">
         <h3>Tests d’endurance</h3>
-        <p><strong>Demi‑Cooper (6′)</strong> et <strong>Cooper (12′)</strong>. Indique la distance par tour. À la fin, tu peux ajouter ¼, ½ ou ¾ de tour pour affiner la distance. VMA = vitesse moyenne.</p>
+        <p><strong>Demi-Cooper (6′)</strong> et <strong>Cooper (12′)</strong>. Indique la distance par tour. En fin de test, ajuste avec ¼, ½ ou ¾ de tour. VMA = vitesse moyenne.</p>
       </article>
     </section>
   </main>
 
   <footer class="footer">
-    ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
+    RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
   </footer>
 </body>
 </html>
