--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ChronoVitesse</title>
+  <title>RunMeasure</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -11,14 +11,14 @@
 </head>
 <body class="page-home">
   <main class="centered">
-    <h1 class="app-title gradient">ChronoVitesse</h1>
+    <h1 class="app-title gradient">RunMeasure</h1>
     <div class="home-actions">
       <a class="btn btn-primary btn-xl" href="options.html">Démarrer</a>
       <a class="btn btn-outline btn-xl" href="aide.html">Aide</a>
     </div>
   </main>
   <footer class="footer">
-    ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
+    RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
   </footer>
 </body>
 </html>
