--- a/mode.html
+++ b/mode.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ChronoVitesse • Mode</title>
+  <title>RunMeasure • Mode</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="topbar colorful">
-    <h1 id="title">ChronoVitesse</h1>
+    <h1 id="title">RunMeasure</h1>
   </header>
 
   <main class="container">
@@ -44,7 +44,7 @@
           <button id="btn-reset" class="btn btn-danger btn-lg" type="button" disabled>Reset</button>
         </div>
 
-        <div id="live-distance" class="live-distance hidden">Distance cumulée : <span id="live-dist-val">0</span> m</div>
+        <div id="live-distance" class="live-distance hidden">Distance cumulée : <span id="live-dist-val">0</span> m</div>
       </div>
 
       <div id="table-wrap" class="table-wrap hidden">
@@ -55,6 +55,8 @@
               <th>Temps cumulé</th>
               <th>Temps tour</th>
               <th>Vitesse tour (km/h)</th>
+              <th>Distance tour (m)</th>
+              <th>Distance cumulée (m)</th>
             </tr>
           </thead>
           <tbody></tbody>
@@ -64,6 +66,8 @@
               <td id="total-time">—</td>
               <td>—</td>
               <td id="total-speed">—</td>
+              <td>—</td>
+              <td id="total-distance">—</td>
             </tr>
           </tfoot>
         </table>
@@ -78,7 +82,7 @@
             <button class="btn btn-outline" data-frac="0.75">+ 3/4 tour</button>
             <button class="btn" id="btn-frac-undo">Annuler</button>
           </div>
-          <small class="info">La distance totale et (si applicable) la VMA seront recalculées. Le QR sera regénéré.</small>
+          <small class="info">Distance totale et (si applicable) VMA recalculées. Le QR sera regénéré.</small>
         </div>
 
         <div id="recap" class="card hidden">
@@ -109,7 +113,7 @@
   </main>
 
   <footer class="footer">
-    ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
+    RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
   </footer>
 </body>
 </html>
