--- a/aide.html
+++ b/aide.html
@@ -23,32 +23,32 @@
     <section class="cards-grid">
       <article class="help-card hc-blue">
         <h3>Temps intermédiaire</h3>
-        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, exporte au choix les <em>temps cumulés</em> (t200, t400…) ou les <em>temps par intervalle</em> (i1, i2…).</p>
+        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, le QR est généré automatiquement (par défaut <em>temps cumulés</em>) et tu peux basculer sur <em>temps par intervalle</em>.</p>
       </article>
 
       <article class="help-card hc-green">
         <h3>Chrono</h3>
-        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, pas de QR.</p>
+        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, <strong>pas de QR</strong>.</p>
       </article>
 
       <article class="help-card hc-emerald">
         <h3>Minuteur</h3>
-        <p>Compte à rebours visuel avec anneau et affichage central. Parfait pour gérer des ateliers en temps limité.</p>
+        <p>Compte à rebours visuel. Préréglages rapides (30 s, 1′, 2′, 3′, 5′, 6′, 8′, 10′, 12′) + champ manuel. <strong>Pas de QR</strong>.</p>
       </article>
 
       <article class="help-card hc-purple">
         <h3>Chrono avec calcul de vitesse</h3>
-        <p>Indique une distance (ex. 100 m), lance le chrono et <strong>Stop</strong> à l’arrivée : la vitesse moyenne est calculée. Récapitulatif + QR minimal.</p>
+        <p>Indique une distance (ex. 100 m), lance puis <strong>Stop</strong> à l’arrivée : vitesse moyenne calculée. Récapitulatif + QR minimal.</p>
       </article>
 
       <article class="help-card hc-amber">
         <h3>Minuteur avec distance</h3>
-        <p>Définit une durée et une distance par tour (ex. 100 m). Chaque <strong>Tour</strong> additionne la distance et calcule la vitesse du tour. Fin de test : ajoute ¼, ½ ou ¾ de tour si besoin.</p>
+        <p>Durée préréglée ou manuelle + distance par tour. Le tableau affiche : <em>Temps cumulé</em>, <em>Temps au tour</em>, <em>Vitesse</em>, <em>Distance cumulée</em>. En fin de test, ajoute ¼, ½, ¾ de tour : tout est recalculé (récap + QR).</p>
       </article>
 
       <article class="help-card hc-pink">
         <h3>Tests d’endurance</h3>
-        <p><strong>Demi-Cooper (6′)</strong> et <strong>Cooper (12′)</strong>. Indique la distance par tour. En fin de test, ajuste avec ¼, ½ ou ¾ de tour. VMA = vitesse moyenne.</p>
+        <p><strong>Demi-Cooper (6′)</strong> / <strong>Cooper (12′)</strong>. Tableau identique (sans colonne “distance tour”). À la fin, ajoute ¼, ½, ¾ : réevalue distance, vitesse, VMA et QR.</p>
       </article>
     </section>
   </main>
