--- a/aide.html
+++ b/aide.html
@@ -23,7 +23,7 @@
     <section class="cards-grid">
       <article class="help-card hc-blue">
         <h3>Temps intermédiaire</h3>
-        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, le QR est généré automatiquement (par défaut <em>temps cumulés</em>) et tu peux basculer sur <em>temps par intervalle</em>.</p>
+        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, le QR se génère automatiquement (par défaut <em>temps cumulés</em>) et tu peux basculer sur <em>temps par intervalle</em>.</p>
       </article>
 
       <article class="help-card hc-green">
@@ -33,7 +33,7 @@
 
       <article class="help-card hc-emerald">
         <h3>Minuteur</h3>
-        <p>Compte à rebours visuel. Préréglages rapides (30 s, 1′, 2′, 3′, 5′, 6′, 8′, 10′, 12′) + champ manuel. <strong>Pas de QR</strong>.</p>
+        <p>Compte à rebours visuel. Sélecteurs dédiés <strong>minutes (1–120)</strong> et <strong>secondes (0–59)</strong>. <strong>Pas de QR</strong>.</p>
       </article>
 
       <article class="help-card hc-purple">
@@ -43,12 +43,12 @@
 
       <article class="help-card hc-amber">
         <h3>Minuteur avec distance</h3>
-        <p>Durée préréglée ou manuelle + distance par tour. Le tableau affiche : <em>Temps cumulé</em>, <em>Temps au tour</em>, <em>Vitesse</em>, <em>Distance cumulée</em>. En fin de test, ajoute ¼, ½, ¾ de tour : tout est recalculé (récap + QR).</p>
+        <p>Choisis la durée via sélecteurs <em>minutes/secondes</em> + la distance par tour. Tableau : <em>Temps cumulé</em>, <em>Temps au tour</em>, <em>Vitesse</em>, <em>Distance cumulée</em>. En fin de test, ajoute ¼, ½, ¾ : tout se met à jour (récap + total du tableau + QR).</p>
       </article>
 
       <article class="help-card hc-pink">
         <h3>Tests d’endurance</h3>
-        <p><strong>Demi-Cooper (6′)</strong> / <strong>Cooper (12′)</strong>. Tableau identique (sans colonne “distance tour”). À la fin, ajoute ¼, ½, ¾ : réevalue distance, vitesse, VMA et QR.</p>
+        <p><strong>Demi-Cooper (6′)</strong> / <strong>Cooper (12′)</strong>. Tableau identique; les boutons ¼, ½, ¾ actualisent la distance totale, la vitesse moyenne, la <strong>VMA</strong> et le QR.</p>
       </article>
     </section>
   </main>
