--- a/mode.html
+++ b/mode.html
@@ -98,6 +98,7 @@
           <label style="display:block;margin-top:.3rem">
             <input type="radio" name="ivl-type" value="intervalles"> Temps <em>à chaque intervalle</em> (200, 200, …)
           </label>
+          <button id="btn-gen-qr" class="btn btn-primary" type="button" style="margin-top:.6rem">Générer le QR</button>
         </div>
 
         <div class="export-buttons">
