--- a/index.html
+++ b/index.html
@@ -8,17 +8,62 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Modal safety */
+    .modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;align-items:center;justify-content:center;padding:1rem;z-index:50}
+    .modal{background:#fff;border-radius:18px;max-width:820px;width:100%;box-shadow:0 10px 30px rgba(0,0,0,.25);overflow:hidden}
+    .modal header{background:linear-gradient(90deg,#1d4ed8,#7c3aed,#db2777);color:#fff;padding:1rem 1.2rem}
+    .modal header h3{margin:0}
+    .modal .body{padding:1rem 1.2rem}
+    .modal .actions{display:flex;justify-content:flex-end;gap:.5rem;padding:0 1.2rem 1.2rem}
+    .badge{display:inline-block;background:#eef2ff;color:#1d4ed8;font-weight:700;border-radius:999px;padding:.2rem .6rem;margin-right:.4rem}
+    .modal ul{margin:.6rem 0 0 1.2rem}
+    .modal ul li{margin:.25rem 0}
+  </style>
 </head>
 <body class="page-home">
   <main class="centered">
     <h1 class="app-title gradient">RunMeasure</h1>
     <div class="home-actions">
       <a class="btn btn-primary btn-xl" href="options.html">Démarrer</a>
+      <button class="btn btn-outline btn-xl" id="btn-safety">Fiche sécurité</button>
       <a class="btn btn-outline btn-xl" href="aide.html">Aide</a>
     </div>
   </main>
   <footer class="footer">
     RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
   </footer>
+
+  <div class="modal-backdrop" id="safety-backdrop" aria-hidden="true">
+    <div class="modal" role="dialog" aria-labelledby="safety-title">
+      <header><h3 id="safety-title">Fiche de sécurité (EPS • course & activités)</h3></header>
+      <div class="body">
+        <p><span class="badge">Avant</span> Echauffement progressif (8–12′), hydratation, tenue adaptée, lacets serrés. Signaler toute douleur, asthme ou contre-indication.</p>
+        <ul>
+          <li>Vérifier la zone : surface propre, pas d’obstacles.</li>
+          <li>Objectif clair & intensité progressive (≈ 1er tour facile).</li>
+          <li>Pas d’écouteurs qui isolent / priorité à la vigilance.</li>
+        </ul>
+        <p><span class="badge">Pendant</span> Respect du sens de course, dépasser à l’extérieur, garder sa trajectoire.</p>
+        <ul>
+          <li>S’hydrater régulièrement sur efforts &gt; 10′.</li>
+          <li>Arrêter en cas de douleur vive, vertiges, essoufflement anormal.</li>
+          <li>Adapter l’allure à son état (parler = bonne intensité).</li>
+        </ul>
+        <p><span class="badge">Après</span> Retour au calme 3–5′, étirements légers, réhydratation, signaler toute gêne.</p>
+        <p style="color:#555;font-size:.95rem"><em>Rappel :</em> respecter les consignes du professeur, le matériel et les autres élèves. La sécurité passe avant la performance.</p>
+      </div>
+      <div class="actions">
+        <button class="btn btn-primary" id="btn-safety-close">J’ai compris</button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const b = document.getElementById('safety-backdrop');
+    document.getElementById('btn-safety').addEventListener('click', ()=>{ b.style.display='flex'; b.setAttribute('aria-hidden','false'); });
+    document.getElementById('btn-safety-close').addEventListener('click', ()=>{ b.style.display='none'; b.setAttribute('aria-hidden','true'); });
+    b.addEventListener('click', (e)=>{ if(e.target===b){ b.style.display='none'; b.setAttribute('aria-hidden','true'); } });
+  </script>
 </body>
 </html>
